[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Actors/Weapons/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/warning.png" type="Texture" id=2]

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )
friction_coeff = 0.01

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Collision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="Collision" to="." method="_on_Collision_area_entered"]
[connection signal="body_entered" from="Collision" to="." method="_on_Collision_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
